--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="card">
         <h2>Projects</h2>
         <ul class="project">
-          <li><a href="https://tierra-apple-clone.netlify.com/" target="_blank">Apple clone</a></li>
-          <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone</a></li>
-          <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone</a></li>
-          <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a></li>
+          <li><a href="https://tierra-apple-clone.netlify.com/" target="_blank">Apple clone | HTML & CSS</a></li>
+          <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone | HTML, CSS & Bootstrap</a></li>
+          <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone | HTML, CSS & Bootstrap</a></li>
+          <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone | HTML, CSS & Bootstrap</a></li>
         </ul>
       </div>
 
