--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone | HTML, CSS & Bootstrap</a></li>
           <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone | HTML, CSS & Bootstrap</a></li>
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone | HTML, CSS & Bootstrap</a></li>
+          <li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a></li>
+          <li><a href="#" target="_blank">Mobile Responsive Layout-COMING SOON</a></li>         
         </ul>
       </div>
 
