--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Projects</h2>
         <ul class="project">
           <li><a href="https://tierra-apple-clone.netlify.com/" target="_blank">Apple clone</a> | HTML & CSS</li>
-          <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone</a> | HTML, CSS & Bootstrapa</li>
+          <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>
