--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>
-          <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">aMobile Responsive Layout</a></li>         
+          <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
         </ul>
       </div>
 
