--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>
           <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
+          <li><a href="" target="_blank"></a>Coming Soon! Online Registration Form</li>       
         </ul>
       </div>
 
