--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>
           <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
-          <li><a href="https://tierra-online-registration.netlify.com" target="_blank">Com Online Registration Form</a></li>       
+          <li><a href="https://tierra-online-registration.netlify.com" target="_blank">Online Registration Form</a> | HTML & CSS</li>       
         </ul>
       </div>
 
