--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="https://tierra-newsweek-clone.netlify.com/" target="_blank">Newsweek clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://tierra-airbnb-press-clone.netlify.com/" target="_blank">AirBnb Press clone</a> | HTML, CSS & Bootstrap</li>
           <li><a href="https://streaming-site-clone.netlify.com/" target="_blank">Netflix clone</a> | HTML, CSS & Bootstrap</li>
-          -><!--<li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>-
+          <!--<li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>-->
           <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
           <li><a href="https://tierra-online-registration.netlify.com" target="_blank">Online Registration Form</a> | HTML & CSS</li>       
         </ul>
