--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <!--<li><a href="https://tierra-personal-profile.netlify.com/" target="_blank">Personal Profile Page</a> | HTML & CSS</li>-->
           <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
           <li><a href="https://tierra-online-registration.netlify.com" target="_blank">Online Registration Form</a> | HTML & CSS</li>
-          <li>Coming Soon!!! | Calculator</li> <!-- <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->           
+          <li>Coming Soon!!! | Calculator</li> <!-- <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->
+          <li>Coming Soon!!! | To Do List</li> <!-- <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->
         </ul>
       </div>
 
