--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a href="https://mobile-first-responsive-layout.netlify.com/" target="_blank">Mobile Responsive Layout</a> | HTML & CSS</li>             
           <li><a href="https://tierra-online-registration.netlify.com" target="_blank">Online Registration Form</a> | HTML & CSS</li>
           <li>Coming Soon!!! | To Do List</li> <!-- <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->
-          <li>Coming Soon!!! | Calculator</li> <!-- <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->
+          <!--<li>Coming Soon!!! | Calculator</li> <a href="#" target="_blank">Calculator | HTML, CSS & JavaScript</a> -->
         </ul>
       </div>
 
